--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -12,11 +12,19 @@
       padding: 0;
       height: 100%;
     }
+    .window {
+      width: 100%;
+      height: 100%;
+      border: 1px solid #202020;
+      overflow: hidden;
+    }
   </style>
 </head>
 
 <body>
-  <div id="app"></div>
+  <div class="window">
+    <div id="app"></div>
+  </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
