feat：测试工具、系统优化

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>互游云</title>
+  <title>互游盒子</title>
   <style lang="less" scoped>
     html,
     body,
