--- a/src/renderer/log.html
+++ b/src/renderer/log.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>互游云</title>
+  <title>日志</title>
   <style lang="less" scoped>
     html,
     body,
@@ -12,14 +12,21 @@
       padding: 0;
       height: 100%;
     }
+
+    .window {
+      width: 100%;
+      height: 100%;
+      border: 1px solid #202020;
+      overflow: hidden;
+    }
   </style>
 </head>
 
 <body>
   <div class="window">
-    <div id="float"></div>
+    <div id="log"></div>
   </div>
-  <script type="module" src="/main.ts"></script>
+  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
